--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,9 @@
+<!--
+ * @Description: 
+ * @Author: wangyonghong
+ * @Date: 2024-08-16 22:56:16
+ * @LastEditTime: 2024-08-20 15:10:43
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>本原智数</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
