--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
  * @Description: 
  * @Author: wangyonghong
  * @Date: 2024-08-27 13:07:02
- * @LastEditTime: 2024-10-31 10:56:44
+ * @LastEditTime: 2024-11-20 16:09:08
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>上海本原管理系统</title>
+    <title>上海本原智数管理系统</title>
     <link rel="stylesheet" href="./css/reset.css"/>
   </head>
   <body>
