--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
  * @Description: 
  * @Author: wangyonghong
  * @Date: 2024-08-27 13:07:02
- * @LastEditTime: 2024-11-20 16:09:08
+ * @LastEditTime: 2024-12-24 17:09:29
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" type="image/jpg" href="%PUBLIC_URL%/logoMG.jpg">
     <title>上海本原智数管理系统</title>
     <link rel="stylesheet" href="./css/reset.css"/>
   </head>
